--- a/css/css/style.css
+++ b/css/css/style.css
@@ -79,7 +79,7 @@
 /* GLOBAL SETTING */
 /*-------------------------------------------------------*/
 * {
-  font-family: "Roboto", sans-serif;
+  font-family: "playfair display", sans-serif;
 }
 
 html, body {
@@ -91,7 +91,7 @@ body {
   position: relative;
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "playfair display", sans-serif;
   font-size: 16px;
   line-height: 32px;
   font-weight: 400;
@@ -99,7 +99,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Roboto", sans-serif;
+  font-family: "playfair display", sans-serif;
   font-weight: 700;
   color: #111111;
 }
