--- a/css/prague/style.css
+++ b/css/prague/style.css
@@ -96,7 +96,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Roboto", sans-serif;
+  font-family: "playfair display", sans-serif;
   font-weight: 700;
   color: #111111;
 }
@@ -4576,7 +4576,7 @@ a:hover, a:focus {
 /* BANNER */
 /*-------------------------------------------------------*/
 .top-banner {
-  min-height: 50vh;
+  min-height: 75vh;
   position: relative;
   width: 100%;
   display: -webkit-box;
