--- a/css/style.css
+++ b/css/style.css
@@ -3393,7 +3393,7 @@ background-image: linear-gradient(to right top, #ae8625, #F7EF8A, #D2AC47, #EDC9
   background: linear-gradient(to right, rgba(24, 25, 28, 0.5), rgba(255, 255, 255, 0));
 }
 .bg-gradient-white-transparent {
-  background: linear-gradient( #ffffff 70%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient( #a79682 70%, rgba(255, 255, 255, 0) 100%);
 }
 .bg-gradient-white-dark-transparent {
   background: -webkit-gradient(linear, left bottom, left top, color-stop(35%, #ffffff), to(transparent));
