navlink color change

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -19044,7 +19044,7 @@
     line-height: 25px;
     font-size: 17px;
     font-weight: 500;
-    color: var(--white);
+    color: var(--black);
     padding-left: 0 !important;
     padding-right: 0 !important;
   }
