--- a/css/style.css
+++ b/css/style.css
@@ -16562,7 +16562,7 @@ canvas {
 }
 .tab-style-08 ul .nav-item .nav-link.active, .tab-style-08 ul .nav-item .nav-link.show, .tab-style-08 ul .nav-item .nav-link:hover {
   border: 0;
-  color: var(--base-color);
+  color: var(--white);
 }
 .tab-style-08 ul .nav-item .nav-link.active .tab-border, .tab-style-08 ul .nav-item .nav-link.show .tab-border, .tab-style-08 ul .nav-item .nav-link:hover .tab-border {
   -wekit-transform: scaleX(1);
