--- a/css/prague/style.css
+++ b/css/prague/style.css
@@ -4590,6 +4590,21 @@ a:hover, a:focus {
           align-items: center;
 }
 
+.mid-banner {
+  min-height: 5vh;
+  position: relative;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .interior-banner {
   min-height: 20vh;
 }
