--- a/css/style.css
+++ b/css/style.css
@@ -577,7 +577,7 @@ b, strong {
   color: var(--base-color) !important;
 }
 .text-base-color, .btn-link.text-base-color {
-  color: var(--base-color);
+  color: var(--base-color) !important;
 }
 .text-black, .btn-link.text-black, a.text-black-hover:hover {
   color: var(--black);
