--- a/css/vendors.css
+++ b/css/vendors.css
@@ -11595,8 +11595,8 @@ textarea.form-control-lg {
     padding-left: 3rem !important;
   }
   .px-xl-6 {
-    padding-right: 250px !important;
-    padding-left: 250px !important;
+    padding-right: 25rem !important;
+    padding-left: 25rem !important;
   }
   .py-xl-0 {
     padding-top: 0 !important;
