--- a/css/prague/style.css
+++ b/css/prague/style.css
@@ -12916,7 +12916,7 @@ min-height: 10vh !important; /* nebo třeba 100px */
   position: absolute;
   width: 20px;
   height: 20px;
-  background-color: rgba(236, 236, 236, 0.4);
+  background-color: #d2b680;
   margin: auto;
   top: 50%;
   left: 50%;
